# python_package_base_repository

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: python_workflow.yml
src/: main.py
